# open_local_ui

./: .gitignore  .gitmodules  .metadata  BRANCHING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  VERSIONING.md  flutter_native_splash.yaml  pubspec.yaml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/images/: IMAGES.md
.github/workflows/: dart-format.yml  flutter-build.yml  greetings.yml
app/: .env.dev  .metadata  LICENSE  analysis_options.yaml  distribute_options.yaml  flutter_launcher_icons.yaml  l10n.yaml  pubspec.yaml
app/assets/: app_changelog.json
app/lib/: env.dart  main.dart
app/linux/: CMakeLists.txt  my_application.cc
app/test/: widget_test.dart
app/windows/: CMakeLists.txt
assets/prompts/: default.txt  (+1 more)
branding/: branding.fig  github_readme_banner.fig
database/: ollama_models.db  ollama_models.sql
lib/: env.dart  main.dart
linux/: my_application.cc
protobufs/: server.proto
scripts/: build_app.ps1  build_app.sh  build_server.ps1  build_server.sh  create_ollama_models_db.py  generate_grpc_app_files.ps1  generate_grpc_app_files.sh  generate_grpc_server_files.ps1  generate_grpc_server_files.sh  generate_intl_files.ps1  generate_intl_files.sh  generate_windows_installer.iss  scrape_ollama_library.py  setup_flutter_for_actions.ps1  setup_flutter_for_actions.sh  windows_x64_setup.iss
server/: pyproject.toml  requirements.txt
server/src/: server.py  server_pb2.py  server_pb2_grpc.py
test/: widget_test.dart
(+258 files in other folders)
